Fixed toast size on small screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -116,8 +116,6 @@ h1, h2, h3, h3, h4, h5 {
 
 .toast {
     background-color: $mahogany;
-    max-width: 500px;
-    width: 500px;
 }
 
 // -------------------------------------------------------------------------- //
